--- a/src/App.css
+++ b/src/App.css
@@ -2,3 +2,14 @@ body{
     padding: 0px;
     margin-left: 0px;
 }
+.logo{
+    margin: 0 auto;
+    width: 60%;
+    height: 120px;
+    display: flex;
+}
+@media screen and (max-width: 587px){
+    .logo{
+        width: 80%;
+    }
+}
